--- a/themes/showcase-hugo-theme/layouts/Index ok v1.html
+++ b/themes/showcase-hugo-theme/layouts/Index ok v1.html
@@ -11,7 +11,7 @@
         target="_blank"
         rel="noopener"
         href="{{ .Params.Link }}"
-        class="card p-4 md:w-1/3 sm:mb-4 mb-6 hover:shadow-l hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
+        class="card p-4 md:w-1/3 sm:mb-4 mb-6 hover:shadow-xl hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
       >
         <div class="rounded-lg h-64 overflow-hidden relative">
           {{ if (or .Params.Image .CurrentSection.Params.Image) }}
@@ -36,10 +36,14 @@
             {{ .Params.Subtitle }}
           </p>
         </div>
-        <div class="card-body">
-          <h5 class="card-title">{{ .Title }}</h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{ .Params.Subtitle }}</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="box-masonry-description">
+          <p>
+              {{ if .Description }}
+                {{ .Description }}
+              {{ else }}
+                {{ .Title }}
+              {{ end }}
+          </p>
         </div>
       </a>
       {{ end }}
