--- a/themes/showcase-hugo-theme/layouts/OriginalIndex.html
+++ b/themes/showcase-hugo-theme/layouts/OriginalIndex.html
@@ -7,11 +7,12 @@
     <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
       {{ range ((where .Site.Pages "Kind" "page").ByParam "subtitle").Reverse}}
       {{ if ne .Params.Exclude true }}
+<!--      {{%/* tooltip */%}}   -->
       <a
         target="_blank"
         rel="noopener"
         href="{{ .Params.Link }}"
-        class="card p-4 md:w-1/3 sm:mb-4 mb-6 hover:shadow-l hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
+        class="card p-4 md:w-1/3 sm:mb-4 mb-6 hover:shadow-xl hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
       >
         <div class="rounded-lg h-64 overflow-hidden relative">
           {{ if (or .Params.Image .CurrentSection.Params.Image) }}
@@ -26,7 +27,7 @@
             >{{ title .Section }}</span
           >
           <h2
-            class="bg-white bg-opacity-50 text-blue-500 px-2 py-1 tracking-widest text-xl leading-tight font-extrabold font-bree text-center w-full flex justify-center items-center absolute top-0 left-0"
+            class="bg-white bg-opacity-50 text-blue-500 px-2 py-1 tracking-widest text-2xl leading-tight font-extrabold font-bree text-center w-full flex justify-center items-center absolute top-0 left-0"
           >
             {{ .Title }}
           </h2>
@@ -36,12 +37,8 @@
             {{ .Params.Subtitle }}
           </p>
         </div>
-        <div class="card-body">
-          <h5 class="card-title">{{ .Title }}</h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{ .Params.Subtitle }}</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
       </a>
+<!--      {{%/* definition */%}}{{ .Params.Subtitle }}{{%/* /definition */%}}{{%/* /tooltip */%}} -->
       {{ end }}
       {{ end }}
     </div>
