--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,51 +1,43 @@
 {{ define "main" }}
 
-<section class="text-gray-700 body-font">
-  <div class="container px-5 py-8 mx-auto">
-    {{- partial "custom-message.html" . -}}
+<div class="col-xs-12 col-sm-8 col-md-9 content-column">
 
-    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
-      {{ range ((where .Site.Pages "Kind" "page").ByParam "subtitle").Reverse}}
-      {{ if ne .Params.Exclude true }}
-      <a
-        target="_blank"
-        rel="noopener"
-        href="{{ .Params.Link }}"
-        class="card p-4 md:w-1/3 sm:mb-4 mb-6 hover:shadow-l hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
-      >
-        <div class="rounded-lg h-64 overflow-hidden relative">
-          {{ if (or .Params.Image .CurrentSection.Params.Image) }}
-          <img
-            alt="{{ .Title }}"
-            class="object-cover object-center h-full w-full"
-            src="{{ (or .Params.Image .CurrentSection.Params.Image) }}"
-          />
+
+    <div class="grid">
+        <div class="row">
+          {{ range ((where .Site.Pages "Kind" "page").ByParam "subtitle").Reverse}}
+              <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+                  <div class="box-masonry">
+                      {{ if and (isset .Params "image") .Params.image }}
+                        {{ if eq .Params.showonlyimage true }}
+                        <a href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay">
+                        {{ else }}
+                        <a href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay with-hover-icon">
+                        {{ end }}
+                            <img src="{{.Params.image | absURL}}" alt="" class="img-responsive">
+                        </a>
+                      {{ end }}
+                      {{ if eq .Params.showonlyimage true }}
+                      <div class="box-masonry-hover-text-header">
+                      {{ else }}
+                      <div class="box-masonry-text">
+                      {{ end }}
+                          <h4><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
+                          <div class="box-masonry-description">
+                            <p>
+                                {{ if .Description }}
+                                  {{ .Description }}
+                                {{ else }}
+                                  {{ .Summary }}
+                                {{ end }}
+                            </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           {{ end }}
-          <span
-            class="bg-blue-500 text-white px-3 py-1 tracking-widest text-xs absolute right-0 bottom-0 rounded-bl"
-            >{{ title .Section }}</span
-          >
-          <h2
-            class="bg-white bg-opacity-50 text-blue-500 px-2 py-1 tracking-widest text-xl leading-tight font-extrabold font-bree text-center w-full flex justify-center items-center absolute top-0 left-0"
-          >
-            {{ .Title }}
-          </h2>
-          <p
-            class="text-grey px-2 py-1 tracking-widest text-md leading-tight font-bold w-full absolute bottom-0 left-0 rounded-bl"
-          >
-            {{ .Params.Subtitle }}
-          </p>
         </div>
-        <div class="card-body">
-          <h5 class="card-title">{{ .Title }}</h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{ .Params.Subtitle }}</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </a>
-      {{ end }}
-      {{ end }}
     </div>
-  </div>
-</section>
+</div>
 
 {{ end }}
