Change all links to whatsapp, all linked to social param

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
       <a
         target="_blank"
         rel="noopener"
-        href="{{ .Params.Link }}"
+        href="{{ .Site.Social.whatsapp }}"
         class="card p-4 md:w-1/4 sm:mb-4 mb-6 hover:shadow-l hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
       >
         <div class="rounded-lg h-56 overflow-hidden relative">
