--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,12 +23,12 @@
       >
       {{ end }}
       {{ end }}
-      {{ range .Site.Menus.main }}
+      <!--{{ range .Site.Menus.main }}
       <a
       href="{{ .URL }}"
       class="mr-2 px-2 rounded cursor-pointer select-none hover:text-gray-900"
       >{{ .Name }}</a>
-      {{ end }}
+      {{ end }}-->
     </nav>
   </div>
 </header>
