--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,14 +3,16 @@
 <section class="text-gray-700 body-font">
   <div class="container px-5 py-8 mx-auto">
     {{- partial "custom-message.html" . -}}
-
+    
+    <!-- Cards -->
     <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
       {{ range (where .Site.Pages "Kind" "page").ByWeight.Reverse}}
       {{ if ne .Params.Exclude true }}
       <a
         target="_blank"
         rel="noopener"
-        href="{{ .Site.Social.whatsapp }}"
+        data-toggle="modal"
+        href="#exampleModalCenter"
         class="card p-4 md:w-1/4 sm:mb-4 mb-6 hover:shadow-l hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
       >
         <div class="rounded-lg h-56 overflow-hidden relative">
@@ -35,6 +37,34 @@
           <p class="card-text text-xs text-justify">{{ .Params.Description }}</p>
         </div>
       </a>
+      
+      <!-- Modal -->
+      <div class="modal fade d-none" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                      {{ if (or .Params.Image .CurrentSection.Params.Image) }}
+                                <img
+                                  alt="{{ .Title }}"
+                                  class="object-cover object-center h-full w-full"
+                                  src="{{ (or .Params.Image .CurrentSection.Params.Image) }}"
+                                />
+                                {{ end }}
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       {{ end }}
       {{ end }}
     </div>
