--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,11 @@
       <a
         target="_blank"
         rel="noopener"
-        href="{{ .Site.Social.whatsapp }}"
+        {{ if .Params.Link }}
+          href="{{ .Params.Link }}"
+        {{ else }}
+          href="{{ .Site.Social.whatsapp }}"
+        {{ end }}
         class="card p-4 md:w-1/4 sm:mb-4 mb-6 hover:shadow-l hover:bg-gray-400 transition duration-200 ease-in rounded-lg {{ lower .Section }}"
       >
         <div class="rounded-lg h-56 overflow-hidden relative">
